--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "@google/genai": "^1.0.1",
-    "@supabase/supabase-js": "^2.43.7"
+    "@supabase/supabase-js": "^2.43.7",
+    "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
