--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.0.1",
     "@supabase/supabase-js": "^2.43.7",
-    "@vercel/analytics": "^1.1.1"
+    "@vercel/analytics": "^1.1.1",
+    "groq-sdk": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
